--- a/templates/predictpage.html
+++ b/templates/predictpage.html
@@ -9,6 +9,13 @@
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
   		<link rel="stylesheet" href="styles.css">
+  		<style>
+  		body{
+			background: #D3CCE3;  
+			background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  
+			background: linear-gradient(to right, #E9E4F0, #D3CCE3); 
+		}
+  		</style>
 	</head>
 	<body>
 		<div class="container">
