--- a/templates/predictpage.html
+++ b/templates/predictpage.html
@@ -20,9 +20,11 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<center>
-					<h3> Enter details </h3>
-				</center>
+			<div class="container">    	
+          	<div>
+                <h3> Heart Attack Prediction </h3>
+                <h6> Technology for saving lives </h6>
+            	<h4> Enter details </h4>
 			</div>
 		</div>
 
